--- a/configs.json
+++ b/configs.json
@@ -1,96 +1,1 @@
-{
-  "127.0.0.1:65432": {
-    "IP": "127.0.0.1",
-    "Port": 65432,
-    "Services": {
-      "Ping": {
-        "host": "4.2.2.2",
-        "ttl": 64,
-        "timeout": 1,
-        "sequence_number": 1,
-        "frequency": 50
-      },
-      "Tracert": {
-        "host": "4.2.2.2",
-        "max_hops": 30,
-        "pings_per_hop": 2,
-        "verbose": false,
-        "frequency": 50
-      },
-      "HTTP": {
-        "url": "http://engineering.oregonstate.edu/EECS",
-        "frequency": 50
-      },
-      "HTTPS": {
-        "url": "https://engineering.oregonstate.edu/EECS",
-        "timeout": 6,
-        "frequency": 50
-      }
-    }
-  },
-  "127.0.0.1:65431": {
-    "IP": "127.0.0.1",
-    "Port": 65431,
-    "Services": {
-      "NTP": {
-        "server": "time.apple.com",
-        "frequency": 50
-      },
-      "DNS": {
-        "dns_server": "8.8.8.8",
-        "query": "youtube.com",
-        "record_types": [
-          "A",
-          "MX",
-          "AAAA",
-          "CNAME"
-        ],
-        "frequency": 50
-      },
-      "TCP": {
-        "server": "youtube.com",
-        "port": 80,
-        "frequency": 50
-      }
-    }
-  },
-  "127.0.0.1:65430": {
-    "IP": "127.0.0.1",
-    "Port": 65430,
-    "Services": {
-      "HTTP": {
-        "url": "http://www.google.com",
-        "frequency": 50
-      },
-      "TCP": {
-        "server": "reddit.com",
-        "port": 80,
-        "frequency": 50
-      },
-      "UDP": {
-        "server": "reddit.com",
-        "port": 80,
-        "timeout": 3,
-        "frequency": 50
-      }
-    }
-  },
-  "127.0.0.1:65429": {
-    "IP": "127.0.0.1",
-    "Port": 65429,
-    "Services": {
-      "Ping": {
-        "host": "127.0.0.1",
-        "ttl": 64,
-        "timeout": 1,
-        "sequence_number": 1,
-        "frequency": 50
-      },
-      "Echo": {
-        "server": "127.0.0.1",
-        "port": 12345,
-        "frequency": 50
-      }
-    }
-  }
-}
+{"127.0.0.1:65432": {"IP": "127.0.0.1", "Port": 65432, "Services": {"Ping": {"host": "4.2.2.2", "ttl": 64, "timeout": 1, "sequence_number": 1, "frequency": 50}, "Tracert": {"host": "4.2.2.2", "max_hops": 30, "pings_per_hop": 2, "verbose": false, "frequency": 50}, "HTTP": {"url": "http://engineering.oregonstate.edu/EECS", "frequency": 50}, "HTTPS": {"url": "https://engineering.oregonstate.edu/EECS", "timeout": 6, "frequency": 50}}}, "127.0.0.1:65431": {"IP": "127.0.0.1", "Port": 65431, "Services": {"NTP": {"server": "time.apple.com", "frequency": 50}, "DNS": {"dns_server": "8.8.8.8", "query": "youtube.com", "record_types": ["A", "MX", "AAAA", "CNAME"], "frequency": 50}, "TCP": {"server": "youtube.com", "port": 80, "frequency": 50}}}, "127.0.0.1:65430": {"IP": "127.0.0.1", "Port": 65430, "Services": {"HTTP": {"url": "http://www.google.com", "frequency": 50}, "TCP": {"server": "reddit.com", "port": 80, "frequency": 50}, "UDP": {"server": "reddit.com", "port": 80, "timeout": 3, "frequency": 50}}}}
